# hippo_gz_plugins

./: CHANGELOG.rst  CMakeLists.txt  package.xml
env-hooks/: hippo_gz_plugins.sh.in
include/: common.hpp
src/hydrodynamics/: CMakeLists.txt
src/kinematic_control/: CMakeLists.txt
src/pose/: CMakeLists.txt
src/range_sensor/: range_sensor_private.cpp
src/thruster/: thruster_private.cpp  thruster_private.hpp
