<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hippo_gz_plugins</name>
  <version>1.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="lennart.alff@gmail.com">vscode</maintainer>
  <license>TODO: License declaration</license>

  <depend>gz_plugin_vendor</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_utils_vendor</depend>
  <depend>hippo_common</depend>
  <depend>hippo_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
